[*] fix footer layout on mobile

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,6 +1,7 @@
 .footer {
   background: #242424;
   height: 590px;
+  min-width: 375px;
 }
 
 .page-footer-container {
